syntax = "proto3";

package orders;

option csharp_namespace = "Users.UsersService.Contracts";

import "google/protobuf/timestamp.proto";

service UsersService {
  rpc Create(CreateUserRequest) returns (CreateUserResponse);
}

enum Sex {
  SEX_UNSPECIFIED = 0;
  SEX_MALE = 1;
  SEX_FEMALE = 2;
}

message CreateUserRequest {
  int64 user_id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  google.protobuf.Timestamp birthdate = 6;
  Sex sex = 7;
  string tel = 8;
  google.protobuf.Timestamp createdAt = 9;
}

message CreateUserResponse {
  int64 user_id = 1;
}
